--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -4,10 +4,10 @@ one:
   title: MyString
   isbn: MyString
   status: MyString
-  user: one
+  author: one
 
 two:
   title: MyString
-  isbn: MyString
+  isbn: MyString2
   status: MyString
-  user: two
+  author: two
